[package]
name = "grid"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet-beta = []
client = []

[dependencies]
anchor-lang = { version = "0.26.0", features = [ "init-if-needed" ] }
anchor-spl = { version = "0.26.0", features = [ "token", "associated_token", "dex" ] }
cypher-client = { git = "https://github.com/chugach-foundation/cypher-client-v3.git" }
borsh = "0.9.1"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
jet-proto-proc-macros = { git = "https://github.com/jet-lab/program-libraries.git" }
num-traits = "0.2"
program-utils = { path = "../../crates/program-utils/"}
static_assertions = "1.1.0"

[dev-dependencies]
anchor-client = "0.26.0"
anchor-lang = "0.26.0"
arrayref = "0.3.6"
async-trait = "0.1.56"
bincode = "^1.3.1"
borsh = "0.9.3"
bytemuck = "1.9.1"
serde = "1.0.136"
solana-program = "1.14.13"
solana-sdk = "1.14.13"
solana-program-test = "1.14.13"
solana-logger = "1.14.13"
thiserror = "1.0.31"
tokio = { version = "^1.14.1", features = ["full", "rt-multi-thread"] }