[package]
name = "vaults"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vaults"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet-beta = []

[dependencies]
anchor-lang = { version = "0.26.0", features = [ "init-if-needed" ] }
anchor-spl = { version = "0.26.0", features = [ "token", "associated_token", "dex" ] }
cypher-client = { git = "https://github.com/chugach-foundation/cypher-client-v3.git" }
borsh = "0.9.1"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
jet-proto-proc-macros = { git = "https://github.com/jet-lab/program-libraries.git" }
num-traits = "0.2"
static_assertions = "1.1.0"

[dev-dependencies]
anchor-client = "0.26.0"
arbitrary = { version = "0.4.6", features = ["derive"] }
arrayref = "0.3.6"
libfuzzer-sys = "0.3"
rand = "0.8.5"
safe-transmute = "0.11.0"
serum_dex = { version = "0.5.4", features = [ "no-entrypoint" ] }
solana-sdk = "~1.14"
solana-client = "~1.14"
solana-program-test = "~1.14"
spl-associated-token-account = { version = "1.0.2", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
thousands = "0.2.0"
tokio = { version = "1.12.0", features = [ "macros", "rt" ] }
futures = "0.3.15"
futures-util = "0.3.15"